--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="my-5">
     <%= form.label :check_type %>
-    <%= form.select :check_type,[["Text", "text"], ["Presence", "presence"], ["Not present", "not_present"]] ,class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
+    <%= form.select :check_type,[["Text", "text"], ["Exists", "exists"], ["Not exists", "not_exists"]] ,class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="my-5">
