--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -8,8 +8,9 @@
 
     <%= link_to "Edit this page", edit_page_path(@page), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
     <%= link_to "Back to pages", pages_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to "Destroy this page", @page, method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
-    </div>
+    <%= button_to "Destroy this page", @page, method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+    <%= button_to "Run check", page_check_path(@page), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+    <h2>Results</h2>
+    <%= render @page.results.order(created_at: :desc) %>
   </div>
 </div>
