--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -1,22 +1,4 @@
-<div id="<%= dom_id page %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Url:</strong>
-    <%= page.url %>
-  </p>
-
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Check type:</strong>
-    <%= page.check_type %>
-  </p>
-
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Selector:</strong>
-    <%= page.selector %>
-  </p>
-
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Match text:</strong>
-    <%= page.match_text %>
-  </p>
-
-</div>
+<%= link_to page, id: dom_id(page), class: "p-4 -mx-4 hover:bg-gray-100" do %>
+  <h4 class="font-bold"><%= page.name %></h4>
+  <div class="text-sm text-gray-700"><%= page.url %></div>
+<% end %>
