--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -10,12 +10,7 @@
     <%= link_to "New page", new_page_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
-  <div id="pages" class="min-w-full">
-    <% @pages.each do |page| %>
-      <%= render page %>
-      <p>
-        <%= link_to "Show this page", page, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-      </p>
-    <% end %>
+  <div id="pages" class="flex flex-col divide-y divide-gray-200">
+    <%= render @pages %>
   </div>
 </div>
