--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <main class="prose mx-auto mt-28 px-5">
+    <main class="max-w-4xl mx-auto mt-28 px-5">
       <%= yield %>
     </main>
   </body>
