--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,9 +1,8 @@
-<div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">Editing page</h1>
-
-  <%= render "form", page: @page %>
-
-  <%= button_to "Destroy this page", @page, method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
-  <%= link_to "Show this page", @page, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to pages", pages_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+<div class="flex items-center justify-between">
+  <h1 class="font-bold text-2xl truncate">
+    <%= link_to "←", @page, class: "p-1 rounded hover:bg-gray-100" %>
+    Edit page
+  </h1>
+  <%= button_to "Delete", @page, method: :delete, data: {turbo_confirm: "Are you sure ?"}, class: "border border-gray-200 rounded shadow px-2 py-1 hover:bg-gray-100" %>
 </div>
+<%= render "form", page: @page %>
