--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,7 +7,7 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Pages</h1>
-    <%= link_to "New page", new_page_path, class: "rounded-lg py-3 px-5 bg-gray-800 text-white block font-medium" %>
+    <%= link_to "New page", new_page_path, class: "border border-gray-200 rounded shadow px-2 py-1 hover:bg-gray-100" %>
   </div>
 
   <div id="pages" class="flex flex-col divide-y divide-gray-200">
