--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,7 +1,8 @@
 <div class="mx-auto md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl">New page</h1>
+  <h1 class="font-bold text-2xl truncate">
+    <%= link_to "←", root_path, class: "p-1 rounded hover:bg-gray-100" %>
+    New page
+  </h1>
 
   <%= render "form", page: @page %>
-
-  <%= link_to "Back to pages", pages_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
