--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,6 +1,6 @@
 <div class="flex justify-between">
   <h1 class="font-bold text-2xl truncate">
-    <%= link_to "<", root_path, class: "p-1 rounded hover:bg-gray-100" %>
+    <%= link_to "←", root_path, class: "p-1 rounded hover:bg-gray-100" %>
     <%= @page.name %>
   </h1>
   <div>
