--- a/app/views/pages/_page.html.erb
+++ b/app/views/pages/_page.html.erb
@@ -5,6 +5,6 @@
       <div class="text-sm text-gray-700"><%= page.url %></div>
     </div>
     
-    <%= render page.results.order(created_at: :desc).first %>
+    <%= render page.last_result %>
   </div>
 <% end %>
